deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-python
  name: hello-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
      - image: de.icr.io/renemeyer/hello-python
        name: hello-python
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 5
